# agentic-observability

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
src/agentic_observability/: __init__.py
src/agentic_observability/agents/: __init__.py  base.py
src/agentic_observability/agents/action/: __init__.py  action.py
src/agentic_observability/agents/anomaly_detection/: __init__.py  detector.py
src/agentic_observability/agents/rag_memory/: __init__.py  memory.py
src/agentic_observability/agents/reasoning/: __init__.py  reasoning.py
src/agentic_observability/api/: __init__.py  main.py
src/agentic_observability/api/routes/: __init__.py  anomalies.py  health.py
src/agentic_observability/config/: __init__.py  settings.py
src/agentic_observability/coordinator/: __init__.py  coordinator.py
src/agentic_observability/core/: __init__.py  circuit_breaker.py  logging_config.py  metrics.py  retry.py
src/agentic_observability/ingestion/: __init__.py
src/agentic_observability/models/: __init__.py
src/agentic_observability/rag/: __init__.py
src/agentic_observability/rag/embeddings/: __init__.py
src/agentic_observability/rag/retrieval/: __init__.py
src/agentic_observability/storage/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_action.py  test_anomaly_detection.py  test_base_agent.py  test_circuit_breaker.py  test_coordinator.py  test_rag_memory.py  test_reasoning.py  test_retry.py
